# quickssh

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
