[package]
name = "quickssh"
version = "0.2.0"
description = "Lightweight desktop MVP for SSH Docker hosts"
authors = ["quickssh"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
